fix: Background and foreground colors do not have a sufficient contrast ratio.

--- a/style-amp.css
+++ b/style-amp.css
@@ -877,7 +877,7 @@ ul.menu {
       font-size: 0.8461538462em; }
       .content-home article .postmetadata,
       .content-home article .postmetadata a:not(:hover) {
-        color: #78797a; }
+        color: #424242; }
 
 /*--------------------------------------------------------------
 ### Archive
